modified:   locales/en.json 	modified:   locales/vi.json

--- a/locales/en.json
+++ b/locales/en.json
@@ -32,9 +32,9 @@
   "phone": "Phone number <br>0366 187 296",
   "blogWelcomeTitle": "Welcome to My Blog!",
   "blogIntroduction": "Introduction",
-  "blogWelcomeIntro1": "This blog is dedicated to sharing knowledge and insights about various technologies. Whether you are a beginner or an experienced professional, I hope you find the content here helpful and informative.",
-  "blogWelcomeIntro2": "You'll find a variety of topics covered here, including web development, mobile applications, artificial intelligence, machine learning, cybersecurity, and much more. Each article is crafted to give you actionable insights and knowledge that you can apply directly to your work or studies.",
-  "blogWelcomeIntro3": "Thank you for visiting my blog. I hope you find the articles here useful and inspiring.",
+  "blogWelcomeIntro1": "This blog is created to share knowledge and information about various fields. Whether you are a beginner or an experienced expert, I hope you will find the content here useful and interesting.",
+  "blogWelcomeIntro2": "You will find a wide range of topics covered, including lifestyle, economics, technology, mathematics, and much more. Each post is written with the aim of providing you with useful knowledge and information that you can directly apply to your work or studies.",
+  "blogWelcomeIntro3": "Thank you for visiting my blog. I hope you find the posts here valuable and inspiring.",
   "blogWelcomeIntro4": "Have a great day!",
   "start_topic": "In this era of rapid technological advancement, computer networks have become an essential part of daily life. This network system enables the sharing and transmission of resources more quickly and conveniently than ever before. To explore computer networks, from basic concepts and benefits to classifications of network systems, read the article below.",
   "networkDefinition": "A computer network is a system that connects multiple computers and devices through communication mediums such as cables, radio waves, or optical environments. By using network devices like routers, switches, and data transmission protocols, computer networks enable computers to communicate and share resources efficiently. This network can be set up in a small scope like a home or office network or expanded globally like the Internet.",
