--- a/locales/vi.json
+++ b/locales/vi.json
@@ -32,8 +32,8 @@
     "phone": "Số điện thoại <br>0366 187 296",
     "blogWelcomeTitle": "Chào mừng đến với Blog của tôi!",
     "blogIntroduction": "Giới thiệu",
-    "blogWelcomeIntro1": "Blog này dành để chia sẻ kiến thức và thông tin về các công nghệ khác nhau. Cho dù bạn là người mới bắt đầu hay là một chuyên gia giàu kinh nghiệm, tôi hy vọng bạn sẽ thấy nội dung ở đây hữu ích và thú vị.",
-    "blogWelcomeIntro2": "Bạn sẽ tìm thấy nhiều chủ đề khác nhau được đề cập ở đây, bao gồm phát triển web, ứng dụng di động, trí tuệ nhân tạo, học máy, an ninh mạng, và nhiều hơn nữa. Mỗi bài viết được viết để cung cấp cho bạn những kiến thức và thông tin hữu ích mà bạn có thể áp dụng trực tiếp vào công việc hoặc học tập của mình.",
+    "blogWelcomeIntro1": "Blog này được tạo ra để chia sẻ kiến thức và thông tin về các lĩnh vực khác nhau. Dù bạn là người mới bắt đầu hay là một chuyên gia dày dặn kinh nghiệm, tôi hy vọng rằng bạn sẽ thấy những nội dung ở đây hữu ích và thú vị.",
+    "blogWelcomeIntro2": "Bạn sẽ tìm thấy nhiều chủ đề đa dạng được đề cập, bao gồm đời sống, kinh tế, công nghệ, toán học, và nhiều hơn nữa. Mỗi bài viết đều được viết với mục đích cung cấp cho bạn những kiến thức và thông tin hữu ích, có thể áp dụng trực tiếp vào công việc hoặc học tập của bạn.",
     "blogWelcomeIntro3": "Cảm ơn bạn đã ghé thăm blog của tôi. Hy vọng bạn thấy các bài viết ở đây hữu ích và truyền cảm hứng.",
     "blogWelcomeIntro4": "Chúc một ngày tốt lành!",
     "start_topic": "Trong thời đại khoa học công nghệ phát triển vượt bậc, mạng máy tính đã trở thành yếu tố thiết yếu trong cuộc sống hàng ngày. Hệ thống mạng lưới này cho phép chia sẻ và truyền tải tài nguyên một cách nhanh chóng và tiện lợi hơn bao giờ hết. Để khám phá về mạng máy tính, từ khái niệm cơ bản, các lợi ích đến phân loại các hệ thống mạng, hãy cùng đọc bài viết dưới đây.",
